test/typeerrors/Heuristics/UnifierCaseRight.hs
test b = case b of
            True  -> 3
            False -> "hello"
